# Finance-Scrapers

./: .gitignore  CHANGELOG.md  README.md  setup.cfg
.github/workflows/: python-publish.yml
finance_scrapers/: __init__.py  downloader.py  stock_info.py  stock_options.py  yahoo_finance.py
package_name/: __init__.py  module_one.py  module_two.py
samples/: data.csv  data.json  data.md  data.xlsx  sample.csv  sample.json  sample.md  sample.xlsx
yahoo_finance/: __init__.py  yahoo_finance.py
