[metadata]
name = package-name
version = 0.0.1
author = your name or github username
description = A short description goes here
long_description = file: README.md
long_description_content_type = text/markdown
keywords = keyword_one, keyword_two, keyword_three
url = https://github.com/your-github-username/your-repo-name
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
packages = find:
install_requirs =
    e.g. selenium
    e.g. requests
