[metadata]
name = finance-scrapers
version = 0.0.2
author = Mandy-cyber
description = A tool to scrape stock information from Yahoo Finance
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python, selenium, stocks, stock-data, yahoofinance, finance
url = https://github.com/Mandy-cyber/Yahoo-Finance
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
packages = find:
install_requires =
    selenium
    requests
    get_chrome_driver
    progressbar
    progressbar2
    typer
    typing_extensions
