[metadata]
name = finance-scrapers
version = 2.0.0
author = Mandy-cyber
description = A tool to scrape and download publicly available stock information. Currently supports Yahoo Finance data.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python, bs4, stocks, requests, stock-data, yahoofinance, finance
url = https://github.com/Mandy-cyber/Yahoo-Finance
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
packages = find:
install_requires =
    requests
    bs4
    html5lib
    pandas
    openpyxl
